# simulations-platform

./: .dockerignore  .env_template  .gitignore  Dockerfile  Dockerfile.mongodb  README.md  app.py  calculate_avg_bandwidth.py  conf.py  configurations.json  db_client.py  debug_chats.py  demo_reasoning.py  docker-compose.yml  fix_chat.py  generate_config.py  main.py  pyproject.toml  reprocess_data.py  requirements.txt  streamlit_log.txt
floodns/: Makefile  README.md  pom.xml  pyproject.toml
llm/: bandwidth_analysis.py  generate.py  ingest.py  rag_pipeline.py  retrieval.py  think_step_by_step.py  train.py
mongo_data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-17484671061826378199.wt  collection-2-17484671061826378199.wt  collection-4-17484671061826378199.wt  collection-7-17484671061826378199.wt  index-1-17484671061826378199.wt  index-3-17484671061826378199.wt  index-5-17484671061826378199.wt  index-6-17484671061826378199.wt  index-8-17484671061826378199.wt  sizeStorer.wt
mongo_data/diagnostic.data/: metrics.2025-01-02T10-23-31Z-00000  metrics.2025-01-02T10-28-34Z-00000  metrics.2025-01-02T10-47-52Z-00000  metrics.2025-01-02T10-53-13Z-00000  metrics.2025-01-02T10-56-12Z-00000  metrics.2025-01-02T11-05-00Z-00000  metrics.2025-01-26T17-50-08Z-00000  metrics.2025-01-26T18-19-01Z-00000  metrics.2025-01-26T18-41-39Z-00000  metrics.2025-01-26T19-19-23Z-00000  metrics.2025-01-26T19-43-10Z-00000  metrics.2025-01-26T19-50-44Z-00000  metrics.2025-01-26T20-02-28Z-00000  metrics.2025-01-26T20-09-31Z-00000  metrics.2025-01-26T20-14-19Z-00000  metrics.2025-01-26T20-21-18Z-00000  metrics.2025-01-26T20-45-50Z-00000  metrics.2025-01-26T20-47-57Z-00000  metrics.2025-01-26T21-00-12Z-00000  metrics.2025-01-27T06-11-50Z-00000  metrics.2025-01-27T06-22-50Z-00000  metrics.2025-01-27T06-25-22Z-00000
pages/: dashboard.py  experiment_details.py
routes/: bandwidth_analysis.py  chat_tab.py  chat_utils.py  configurations.py  dashboard.py  experiment_details.py  query.py  reasoning.py  reasoning_analysis.py  valid_options.py
(+10 files in other folders)
