[tool.poetry]
name = "simulations-platform"
version = "0.1.0"
description = ""
authors = ["Ofir Cohen <ofir.cohen205@cs.huji.ac.il>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
altair = "5.4.1"
attrs = "24.2.0"
blinker = "1.9.0"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
cachetools = "5.5.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
cleo = "2.1.0"
click = "8.1.7"
colorama = "0.4.6"
contourpy = "1.2.0"
crashtest = "0.4.1"
cycler = "0.12.1"
distlib = "0.3.9"
dnspython = "2.7.0"
dulwich = "0.21.7"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
fonttools = "4.46.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
idna = "3.10"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jinja2 = "3.1.4"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
keyring = "24.3.1"
kiwisolver = "1.4.5"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
mdurl = "0.1.2"
more-itertools = "10.5.0"
msgpack = "1.1.0"
narwhals = "1.14.1"
numpy = "1.26.2"
packaging = "23.2"
pandas = "2.2.3"
pexpect = "4.9.0"
pillow = "11.0.0"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
poetry = "1.8.4"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
protobuf = "5.28.3"
ptyprocess = "0.7.0"
pyarrow = "18.0.0"
pydeck = "0.9.1"
pygments = "2.18.0"
pymongo = "4.10.1"
pyparsing = "3.1.1"
pyproject-hooks = "1.2.0"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
pywin32-ctypes = "0.2.3"
rapidfuzz = "3.10.1"
typer = "^0.9.4"
referencing = "0.35.1"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.21.0"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
streamlit = "1.40.1"
tenacity = "9.0.0"
toml = "0.10.2"
tomlkit = "0.13.2"
tornado = "6.4.1"
trove-classifiers = "2024.10.21.16"
typing-extensions = "4.12.2"
tzdata = "2023.3"
urllib3 = "2.2.3"
virtualenv = "20.28.0"
watchdog = "6.0.0"
ruff = "^0.8.3"
isort = "^5.13.2"
mypy = "^1.13.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
